--- a/index.html
+++ b/index.html
@@ -6,16 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jokes Generator App</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 </head>
 
 <body>
-    <div class="container">
-        <h3>Dad Jokes Section</h3>
-        <div id="joke" class="joke">
-            <!-- Joke Goes Here Inside the Joke Container -->
+    <header>
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+              <i class="fas fa-bars"></i>
+            </label>
+            <label class="logo">Jokes Generator App</label>
+            <ul>
+                <li><a class="active" href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Dad Jokes</a></li>
+                <li><a href="#">Chuck Norris Jokes</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="container">
+            <h3>Random Dad Joke:</h3>
+            <div id="joke" class="joke">
+                <!-- Joke Goes Here Inside the Joke Container -->
+            </div>
+            <button id="get_joke" class="btn">Get Another Joke</button>
+            <p>Random Dad Joke API URL <a href="https://icanhazdadjoke.com/">icanhazdadjoke</a></p>
         </div>
-        <button id="get_joke" class="btn"></button>
-    </div>
+    </main>
+
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
