--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
             </label>
             <label class="logo">Jokes Generator App</label>
             <ul>
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="about.html">About</a></li>
                 <li><a href="dad-jokes.html">Dad Jokes</a></li>
                 <li><a href="chuck-norris-jokes.html">Chuck Norris Jokes</a></li>
             </ul>
@@ -28,13 +28,7 @@
     </header>
     <main>
         <div class="container" style="margin-top: 4rem;  text-transform: capitalize;">
-            <h3>Welcome to my Jokes Generator App</h3>
-            <div>
-                <p><i class="fa fa-laugh-squint"></i> Dad Jokes</p>
-                <p><i class="fa fa-laugh-squint"></i> Chuck Norris Jokes</p>
-            </div>
-            <br>
-            <p>Full Introduction Details section Coming Soon</p>
+            <h3>About section Coming Soon</h3>
 
         </div>
     </main>
