--- a/index.html
+++ b/index.html
@@ -29,20 +29,15 @@
     <main>
         <div class="container" style="margin-top: 4rem;  text-transform: capitalize;">
             <h3>Welcome to my Jokes Generator App</h3>
-            <div>
-                <p><i class="fa fa-laugh-squint"></i> Dad Jokes</p>
-                <p><i class="fa fa-laugh-squint"></i> Chuck Norris Jokes</p>
+            <div class="categories">
+                <a href="dad-jokes.html"><button class="btn"><i class="fa fa-laugh-squint"></i> Dad Jokes</button></a>
+                <a href="chuck-norris-jokes.html"><button class="btn"><i class="fa fa-laugh-squint"></i> Chuck Norris Jokes</button></a>
             </div>
             <br>
-            <p>Full Introduction Details section Coming Soon</p>
+            <p>Full Introduction Coming Soon</p>
 
         </div>
     </main>
-<<<<<<< HEAD
-=======
-
-    <script src="js/main.js"></script>
->>>>>>> fa32adb0f26309940300f1b0298210791465f58c
 </body>
 
 </html>
